[project]
name = "greenpy"
version = "0.2.0"
description = "Measure the 3-30-300 rule of urban greening using Apache Sedona"
readme = "README.md"
authors = [
    { name = "Andrés Camilo Zúñiga-González", email = "ancazugo@hotmail.com" },
]
requires-python = ">=3.12"
keywords = ["urban-greening", "3-30-300", "apache-sedona", "gis", "geospatial"]
dependencies = [
    "apache-sedona[kepler-map,pydeck-map]==1.9.0",
    "earthengine-api>=1.7.12",
    "eemont>=2025.7.1",
    "geopandas>=1.1.2",
    "h3>=4.5.0",
    "loguru>=0.7.3",
    "osmnx>=2.0.7",
    "overturemaps>=1.0.1",
    "pyarrow==19.0.1",
    "pyproj>=3.6.0",
    "pyspark==3.5.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rasterstats>=0.20.0",
    "rioxarray>=0.21.0",
    "scipy>=1.13.0",
    "tqdm>=4.67.3",
    "typer>=0.21.1",
    "xee>=0.1.1",
]

[project.scripts]
greenpy = "greenpy.cli:main"

[project.urls]
Homepage = "https://github.com/ancazugo/greenpy"
Repository = "https://github.com/ancazugo/greenpy"

[dependency-groups]
dev = [
    "gdal==3.10.0",
    "install-jdk>=1.1.0",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenpy"]

[tool.hatch.build.targets.sdist]
include = ["src/greenpy", "examples", "README.md"]
